# job-queue-system

./: 01-job-queue-system.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
examples/: basic.rs
job-queue-macros/: Cargo.toml
job-queue-macros/src/: lib.rs
src/: consumer.rs  error.rs  lib.rs  main.rs  models.rs  persistence.rs  producer.rs  queue.rs  scheduler.rs  task.rs
src/consumer/: mod.rs
src/persistence/: memory.rs  mod.rs  sqlite.rs
src/producer/: mod.rs
src/queue/: config.rs  core.rs  levels.rs  metrics.rs  mod.rs  models.rs  worker.rs
src/queue/core/: tests.rs
src/scheduler/: memory.rs  model.rs  runner.rs  sqlite.rs
src/scheduler/runner/: tests.rs
tests/: integration.rs  task_macro_opts.rs
