[package]
name = "job-queue-system"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["job-queue-macros"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
job-queue-macros = { path = "job-queue-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
